Add LilloChat, NeuroNexus

--- a/index.html
+++ b/index.html
@@ -142,12 +142,20 @@
 
             <div class="projects-timeline">
               <a
-                href="#project-yudel"
-                id="projects-timeline__yudel"
+                href="#project-lillochat"
+                id="projects-timeline__lillochat"
                 class="projects-timeline__project"
               >
-                <h3>Yudel</h3>
-                <small>2021 - ajd.</small>
+                <h3>LilloChat</h3>
+                <small>2024</small>
+              </a>
+              <a
+                href="#project-neuronexus"
+                id="projects-timeline__neuronexus"
+                class="projects-timeline__project"
+              >
+                <h3>NeuroNexus</h3>
+                <small>2023</small>
               </a>
               <a
                 href="#project-donjon-hexagone"
@@ -155,6 +163,14 @@
                 class="projects-timeline__project"
               >
                 <h3>Donjon Hexagone</h3>
+                <small>2023</small>
+              </a>
+              <a
+                href="#project-yudel"
+                id="projects-timeline__yudel"
+                class="projects-timeline__project"
+              >
+                <h3>Yudel</h3>
                 <small>2021 - ajd.</small>
               </a>
             </div>
@@ -164,34 +180,35 @@
           <div
             class="project-content"
             data-aos="zoom-in-right"
-            id="project-yudel"
+            id="project-lillochat"
           >
             <div class="project-content__top">
               <div class="project-description">
                 <div class="project-logo-and-title">
                   <img
-                    src="assets/images/logos/yudel.png"
+                    src="assets/images/logos/lillochat.png"
                     class="project-logo"
                     alt="Logo"
                   />
-                  <h1>Yudel</h1>
+                  <h1>LilloChat</h1>
                 </div>
-                <small>Projet personnel</small>
+                <small>Projet universitaire en duo</small>
 
                 <p>
-                  Application permettant de télécharger et donc de lire de la
-                  musique même hors-ligne.
+                  Réseau social basé sur des fils de discussion, offrant la
+                  possibilité de créer, rejoindre et animer des conversations en
+                  toute simplicité.
                 </p>
 
                 <div class="project-buttons">
-                  <a
+                  <!-- <a
                     class="button"
                     target="_blank"
                     href="https://github.com/lonyyy/yudel-releases/releases/download/demo/yudel-demo.apk"
-                    >Télécharger la version démo (APK)</a
-                  >
-                  <button class="secondary project-btn-details">
-                    Afficher les détails techniques
+                    >Accéder au GitHub (ne marche pas encore)</a
+                  > -->
+                  <button class="project-btn-details">
+                    Afficher les détails techniques & humains
                   </button>
                 </div>
               </div>
@@ -201,11 +218,13 @@
                   <h2>Fonctionnalités</h2>
                   <div>
                     <ul>
-                      <li>Téléchargeur de musique</li>
-                      <li>Lecteur de musique</li>
-                      <li>Système de playlists</li>
-                      <li>Système d’ambiance sonore (ex : pluie...)</li>
-                      <li>Interface fluide et pratique</li>
+                      <li>Création et gestion de fils de discussion</li>
+                      <li>Possibilité de rejoindre et quitter des fils</li>
+                      <li>Envoi et suppression de messages</li>
+                      <li>Système de likes sur les messages</li>
+                      <li>Gestion des membres de fils</li>
+                      <li>Possibilité d'envoyer des images</li>
+                      <li>Système d'expiration automatique des messages</li>
                     </ul>
                   </div>
                 </div>
@@ -213,18 +232,26 @@
                 <div class="project-technos-and-versions">
                   <div class="project-specification">
                     <h2>Technologies</h2>
-                    <div>Dart avec Flutter, SQL</div>
+                    <div>
+                      Java, Tomcat (Servlets, JSP), SQL (PostgreSQL), BCrypt,
+                      architecture MVC
+                    </div>
                   </div>
 
                   <div class="project-specification">
-                    <h2>Versions</h2>
+                    <h2>Compétences techniques acquises</h2>
                     <div>
-                      <a
-                        href="https://github.com/lonyyy/yudel-releases/releases"
-                        target="_blank"
-                      >
-                        https://github.com/lonyyy/yudel-releases/releases</a
-                      >
+                      Framework Tomcat, Sécurité & Authentification (BCrypt,
+                      Sessions, Injections SQL / XSS), Utilisation framework CSS
+                      Daisy UI (TailwindCSS)
+                    </div>
+                  </div>
+
+                  <div class="project-specification">
+                    <h2>Savoir-être</h2>
+                    <div>
+                      Travail d'équipe, Esprit d'analyse, Rigueur, Sens de la
+                      sécurité
                     </div>
                   </div>
                 </div>
@@ -235,24 +262,150 @@
 
               <div class="project-screenshots-carousel">
                 <img
-                  src="assets/images/screens/yudel/1.jpg"
-                  alt="Capture d'écran de l'application Yudel"
+                  src="assets/images/screens/lillochat/1.png"
+                  alt="Capture d'écran de l'application LilloChat"
                 />
                 <img
-                  src="assets/images/screens/yudel/2.jpg"
-                  alt="Capture d'écran de l'application Yudel"
+                  src="assets/images/screens/lillochat/2.png"
+                  alt="Capture d'écran de l'application LilloChat"
                 />
                 <img
-                  src="assets/images/screens/yudel/3.jpg"
-                  alt="Capture d'écran de l'application Yudel"
+                  src="assets/images/screens/lillochat/3.png"
+                  alt="Capture d'écran de l'application LilloChat"
                 />
                 <img
-                  src="assets/images/screens/yudel/4.jpg"
-                  alt="Capture d'écran de l'application Yudel"
+                  src="assets/images/screens/lillochat/4.png"
+                  alt="Capture d'écran de l'application LilloChat"
                 />
               </div>
             </div>
           </div>
+
+          <div
+            class="project-content"
+            data-aos="zoom-in-right"
+            id="project-neuronexus"
+          >
+            <div class="project-content__top">
+              <div class="project-description">
+                <div class="project-logo-and-title">
+                  <img
+                    src="assets/images/logos/neuronexus.png"
+                    class="project-logo"
+                    alt="Logo"
+                  />
+                  <h1>NeuroNexus</h1>
+                </div>
+                <small>Projet universitaire en groupe de 4</small>
+
+                <p>
+                  NeuroNexus est un logiciel de classification de données basé
+                  sur l'algorithme KNN (k-plus proches voisins). Il permet
+                  d'importer des fichiers CSV et de classifier dynamiquement les
+                  points en fonction de leurs attributs. Conçu avec Java et
+                  JavaFX, il offre une interface intuitive et des
+                  fonctionnalités avancées pour analyser et visualiser les
+                  données sous forme de graphes 2D et 3D.
+                </p>
+
+                <div class="project-buttons">
+                  <!-- <a
+                    class="button"
+                    target="_blank"
+                    href="https://github.com/lonyyy/yudel-releases/releases/download/demo/yudel-demo.apk"
+                    >Accéder au GitHub (ne marche pas)</a
+                  > -->
+                  <button class="project-btn-details">
+                    Afficher les détails techniques & humains
+                  </button>
+                </div>
+              </div>
+
+              <div class="project-specifications">
+                <div class="project-specification">
+                  <h2>Fonctionnalités</h2>
+                  <div>
+                    <ul>
+                      <li>Importation des données via fichiers CSV</li>
+                      <li>
+                        Classification KNN avec choix entre la distance
+                        Euclidienne et Manhattan
+                      </li>
+                      <li>
+                        Sélection dynamique des axes et critères de
+                        classification
+                      </li>
+                      <li>
+                        Évaluation de la robustesse du modèle via validation
+                        croisée
+                      </li>
+                      <li>
+                        Visualisation interactive des points avec un graphe
+                      </li>
+                      <li>Mode 3D pour une meilleure analyse des attributs</li>
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="project-technos-and-versions">
+                  <div class="project-specification">
+                    <h2>Technologies</h2>
+                    <div>Java, JavaFX, architecture MVC, OpenCSV</div>
+                  </div>
+
+                  <div class="project-specification">
+                    <h2>Compétences techniques acquises</h2>
+                    <div>
+                      Développement d'interface graphique avec JavaFX,
+                      Utilisation du pattern MVC, Implémentation de K-Nearest
+                      Neighbors (KNN, classification supervisée), Optimisation
+                      de la classification, Généricité des classes, Tests &
+                      Debugging
+                    </div>
+                  </div>
+
+                  <div class="project-specification">
+                    <h2>Savoir-être</h2>
+                    <div>
+                      Travail en équipe, Gestion de projet, Esprit analytique,
+                      Résolution de problèmes
+                    </div>
+                  </div>
+
+                  <!-- <div class="project-specification">
+                    <h2>Versions</h2>
+                    <div>
+                      <a
+                        href="https://github.com/lonyyy/yudel-releases/releases"
+                        target="_blank"
+                      >
+                        https://github.com/lonyyy/yudel-releases/releases</a
+                      >
+                    </div>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+            <div class="project-screenshots">
+              <h2>Visuels</h2>
+
+              <div class="project-screenshots-carousel">
+                <img
+                  src="assets/images/screens/neuronexus/1.png"
+                  alt="Capture d'écran de l'application NeuroNexus"
+                />
+                <img
+                  src="assets/images/screens/neuronexus/2.png"
+                  alt="Capture d'écran de l'application NeuroNexus"
+                />
+                <img
+                  src="assets/images/screens/neuronexus/3.png"
+                  alt="Capture d'écran de l'application NeuroNexus"
+                />
+              </div>
+            </div>
+          </div>
+
           <div
             class="project-content"
             data-aos="zoom-in-right"
@@ -269,7 +422,7 @@
                   <h1>Donjon Hexagone</h1>
                 </div>
 
-                <small>Projet universitaire</small>
+                <small>Projet universitaire en groupe de 6</small>
 
                 <p>
                   Jeu tour par tour ("rogue-like") où le joueur avance à travers
@@ -307,7 +460,7 @@
                   <div class="project-specification">
                     <h2>Technologies</h2>
                     <div>
-                      Java, JUnit, Terminal, Méthode agile en groupe de 6
+                      Java, JUnit, Terminal, Méthode agile en groupe de 6, SCRUM
                     </div>
                   </div>
 
@@ -320,6 +473,23 @@
                       >
                         https://github.com/lonyyy/donjon-hexagone-agile</a
                       >
+                    </div>
+                  </div>
+
+                  <div class="project-specification">
+                    <h2>Compétences techniques acquises</h2>
+                    <div>
+                      Gestion des entrées/sorties en terminal, Gestion de
+                      sauvegardes, Méthode SCRUM, Gestion des versions avec Git
+                    </div>
+                  </div>
+
+                  <div class="project-specification">
+                    <h2>Savoir-être</h2>
+                    <div>
+                      Travail en équipe, Adaptabilité, Organisation & rigueur,
+                      Communication & compréhension avec l'équipe, Résolution de
+                      problèmes
                     </div>
                   </div>
                 </div>
@@ -340,6 +510,117 @@
                 <img
                   src="assets/images/screens/donjon-hexagone/3.png"
                   alt="Capture d'écran du jeu Donjon Hexagone"
+                />
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="project-content"
+            data-aos="zoom-in-right"
+            id="project-yudel"
+          >
+            <div class="project-content__top">
+              <div class="project-description">
+                <div class="project-logo-and-title">
+                  <img
+                    src="assets/images/logos/yudel.png"
+                    class="project-logo"
+                    alt="Logo"
+                  />
+                  <h1>Yudel</h1>
+                </div>
+                <small>Projet personnel</small>
+
+                <p>
+                  Application permettant de télécharger et donc de lire de la
+                  musique même hors-ligne.
+                </p>
+
+                <div class="project-buttons">
+                  <a
+                    class="button"
+                    target="_blank"
+                    href="https://github.com/lonyyy/yudel-releases/releases/download/demo/yudel-demo.apk"
+                    >Télécharger la version démo (APK)</a
+                  >
+                  <button class="secondary project-btn-details">
+                    Afficher les détails techniques & humains
+                  </button>
+                </div>
+              </div>
+
+              <div class="project-specifications">
+                <div class="project-specification">
+                  <h2>Fonctionnalités</h2>
+                  <div>
+                    <ul>
+                      <li>Téléchargeur de musique</li>
+                      <li>Lecteur de musique</li>
+                      <li>Système de playlists</li>
+                      <li>Système d’ambiance sonore (ex : pluie...)</li>
+                      <li>Interface fluide et pratique</li>
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="project-technos-and-versions">
+                  <div class="project-specification">
+                    <h2>Technologies</h2>
+                    <div>Dart avec Flutter, SQL</div>
+                  </div>
+
+                  <div class="project-specification">
+                    <h2>Versions</h2>
+                    <div>
+                      <a
+                        href="https://github.com/lonyyy/yudel-releases/releases"
+                        target="_blank"
+                      >
+                        https://github.com/lonyyy/yudel-releases/releases</a
+                      >
+                    </div>
+                  </div>
+
+                  <div class="project-specification">
+                    <h2>Compétences techniques acquises</h2>
+                    <div>
+                      Gestion de l'état, Optimisation des performances, UI/UX
+                      design, Animations, Lecture & gestion de fichiers audio,
+                      Amélioration continue (refactorisation & optimisation du
+                      code incrémentale)
+                    </div>
+                  </div>
+
+                  <div class="project-specification">
+                    <h2>Savoir-être</h2>
+                    <div>
+                      Autonomie, Persévérance, Créativité, Exigence & souci du
+                      détail, Capacité d'apprentissage
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="project-screenshots">
+              <h2>Visuels</h2>
+
+              <div class="project-screenshots-carousel">
+                <img
+                  src="assets/images/screens/yudel/1.jpg"
+                  alt="Capture d'écran de l'application Yudel"
+                />
+                <img
+                  src="assets/images/screens/yudel/2.jpg"
+                  alt="Capture d'écran de l'application Yudel"
+                />
+                <img
+                  src="assets/images/screens/yudel/3.jpg"
+                  alt="Capture d'écran de l'application Yudel"
+                />
+                <img
+                  src="assets/images/screens/yudel/4.jpg"
+                  alt="Capture d'écran de l'application Yudel"
                 />
               </div>
             </div>
@@ -567,6 +848,10 @@
 
       <!-- TODO: Dernière section : Accéder au CV format PDF -->
     </main>
+
+    <div id="image-preview">
+      <img src="" alt="" />
+    </div>
 
     <footer>
       <b>Lony Michaux</b>
