Add long descriptions (for the review)

--- a/index.html
+++ b/index.html
@@ -195,9 +195,22 @@
                 <small>Projet universitaire en duo</small>
 
                 <p>
-                  Réseau social basé sur des fils de discussion, offrant la
+                  <!-- Réseau social basé sur des fils de discussion, offrant la
                   possibilité de créer, rejoindre et animer des conversations en
-                  toute simplicité.
+                  toute simplicité. -->
+
+                  LilloChat est un réseau social basé sur des fils de
+                  discussion, permettant aux utilisateurs de créer, rejoindre et
+                  animer des conversations en toute simplicité. Conçu pour
+                  favoriser les échanges faciles, il offre une interface
+                  intuitive. Le projet a été développé avec Java, Tomcat,
+                  Servlets et SQL, en architecture MVC, garantissant une bonne
+                  séparation des responsabilités. La gestion des utilisateurs et
+                  des mots de passe est sécurisée grâce à Bcrypt. Ce projet m’a
+                  permis d’acquérir des compétences en développement back-end,
+                  structuration d’une base de données et gestion des sessions
+                  utilisateurs, tout en mettant en pratique des concepts avancés
+                  en sécurité et performance des applications web.
                 </p>
 
                 <div class="project-buttons">
@@ -299,13 +312,34 @@
                 <small>Projet universitaire en groupe de 4</small>
 
                 <p>
+                  <!-- NeuroNexus est un logiciel de classification de données basé
+                  sur l'algorithme KNN (k-plus proches voisins). Il permet
+                  d'importer des fichiers CSV et de classifier dynamiquement les
+                  points en fonction de leurs attributs. Conçu avec Java et
+                  JavaFX, il offre une interface intuitive et des
+                  fonctionnalités avancées pour analyser et visualiser les
+                  données sous forme de graphes 2D et 3D. -->
+
                   NeuroNexus est un logiciel de classification de données basé
                   sur l'algorithme KNN (k-plus proches voisins). Il permet
                   d'importer des fichiers CSV et de classifier dynamiquement les
                   points en fonction de leurs attributs. Conçu avec Java et
                   JavaFX, il offre une interface intuitive et des
                   fonctionnalités avancées pour analyser et visualiser les
-                  données sous forme de graphes 2D et 3D.
+                  données sous forme de graphes 2D et 3D. L’application prend en
+                  charge différentes distance (Euclidienne, Manhattan) et permet
+                  aux utilisateurs de sélectionner les attributs de
+                  classification. Un module de validation croisée évalue la
+                  fiabilité de l’algorithme en calculant un taux de réussite.
+                  Les interactions incluent l’affichage des informations
+                  détaillées d’un point en cliquant dessus, ainsi que la
+                  possibilité d’ajouter de nouvelles données pour tester leur
+                  classification. Grâce à OpenCSV, la gestion des fichiers est
+                  optimisée pour garantir la compatibilité avec divers jeux de
+                  données. NeuroNexus a été conçu en équipe, en appliquant des
+                  principes de programmation modulaire et orientée objet,
+                  renforçant mes compétences en développement Java, manipulation
+                  de données et visualisation graphique.
                 </p>
 
                 <div class="project-buttons">
