Add responsive design

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       content="Découvrez le CV numérique de Lony Michaux, étudiant en informatique à l'Université de Lille."
     />
 
-    <meta property="og:title" content="Lony Michaux — CV numérique" />
+    <meta property="og:title" content="Lony Michaux — Portfolio" />
 
     <meta
       property="og:description"
-      content="Découvrez le CV numérique de Lony Michaux, étudiant en informatique à l'Université de Lille."
+      content="Découvrez mon portfolio, étudiant en informatique à l'Université de Lille."
     />
 
     <meta property="og:image" content="assets/images/favicon.png" />
@@ -43,7 +43,7 @@
 
     <meta name="msapplication-navbutton-color" content="#160e1d" />
 
-    <title>Lony Michaux — CV numérique</title>
+    <title>Lony Michaux — Portfolio</title>
   </head>
   <body class="loading">
     <header>
@@ -76,17 +76,9 @@
           <h1>Lony MICHAUX</h1>
           <p class="me-section__description-paragraph">
             Étudiant en deuxième année de BUT Informatique à l’Université de
-            Lille, je suis particulièrement intéressé par le développement
-            d’applications mobiles et la création d’expériences utilisateur
-            innovantes. Mon projet Yudel, une application mobile de musique, est
-            une réalisation personnelle qui illustre mon intérêt pour ce
-            domaine. Passionné par les nouvelles technologies, je suis toujours
-            à l'affût des dernières tendances et je suis ravi de découvrir de
-            nouveaux langages de programmation et outils de développement. À
-            terme, j’aimerais travailler dans une entreprise spécialisée dans le
-            développement d’applications mobiles ou d’expériences de réalité
-            virtuelle. Un stage me permettrait d’acquérir une expérience
-            professionnelle solide et de me rapprocher de mon objectif.
+            Lille, je suis actuellement à la recherche d'une alternance en
+            développement d'applications mobiles / web à partir de septembre
+            2025.
           </p>
         </div>
 
@@ -98,7 +90,7 @@
         </div>
       </section>
 
-      <section class="formation-section" id="my-formation">
+      <section class="formation-section card-effect" id="my-formation">
         <h1>Ma formation</h1>
 
         <table>
@@ -802,7 +794,7 @@
         <h1>Mes loisirs</h1>
 
         <div class="hobbies-list">
-          <div class="hobby hobby-cinema">
+          <div class="hobby hobby-cinema card-effect">
             <h2>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -847,7 +839,7 @@
               </a>
             </div>
           </div>
-          <div class="hobby">
+          <div class="hobby card-effect">
             <h2>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
